--- a/medCalc/package.json
+++ b/medCalc/package.json
@@ -20,6 +20,7 @@
     "gulp-typescript": "2.10.0",
     "gulp-uglify": "1.5.1",
     "gulp-watch": "4.3.5",
-    "gulp-manifest": "0.1.1"
+    "gulp-manifest": "0.1.1",
+    "gulp-html-replace": "1.5.5"
   }
 }
