--- a/medCalc/scripts/tsconfig.json
+++ b/medCalc/scripts/tsconfig.json
@@ -1,5 +1,72 @@
 {
-    "compilerOptions": {
-      "noEmit": true
-  }
+  "compilerOptions": {
+    "noEmit":  true,
+    "target": "es5",
+    "declaration": false,
+    "noImplicitAny": false,
+    "removeComments": true,
+    "noLib": false,
+    "watch": true,
+    "inlineSourceMap": true,
+    "outDir": "../debug/scripts/"
+  },
+    "filesGlob": [
+        "./**/*.ts",
+        "../typings/**/*.ts",
+        "!../../node_modules/**/*.ts"
+    ],
+    "files": [
+        "./typings/angularjs/angular-animate.d.ts",
+        "./typings/angularjs/angular-route.d.ts",
+        "./typings/angularjs/angular-sanitize.d.ts",
+        "./typings/angularjs/angular.d.ts",
+        "./typings/jquery/jquery.d.ts",
+        "./typings/mathjs/mathjs.d.ts",
+        "./typings/underscore/underscore.d.ts",
+        "./views/views.ts",
+        "./views/cardiology/CHADScore.ts",
+        "./views/cardiology/CRUSADEScore.ts",
+        "./views/cardiology/ESCSCORE.ts",
+        "./views/cardiology/EuroSCORE.ts",
+        "./views/cardiology/EuroSCOREII.ts",
+        "./views/cardiology/GRACEScore.ts",
+        "./views/cardiology/HASBLED.ts",
+        "./views/cardiology/HEARTScore.ts",
+        "./views/cardiology/KillipClassEval.ts",
+        "./views/cardiology/NYHAClassEval.ts",
+        "./views/ecg/ECG_Duke_Treadmill_Score.ts",
+        "./views/ecg/ECG_Heart_Rate.ts",
+        "./views/ecg/ECG_QT.ts",
+        "./views/ecg/ECG_QTc.ts",
+        "./views/ecg/ECG_Sokolow.ts",
+        "./views/internalMedicine/BMI.ts",
+        "./views/internalMedicine/BSA.ts",
+        "./views/internalMedicine/Calc.ts",
+        "./views/internalMedicine/GFR.ts",
+        "./views/internalMedicine/GlasgowComaScale.ts",
+        "./views/pulmonology/ArterialBloodGasses.ts",
+        "./views/pulmonology/GenevaScore.ts",
+        "./views/pulmonology/PESI.ts",
+        "./views/pulmonology/WellsScore.ts",
+        "./views/triplex/Triplex_AorticValve_Area_Vmax.ts",
+        "./views/triplex/Triplex_AorticValve_Area_VTI.ts",
+        "./views/triplex/Triplex_AorticValve_Impedance.ts",
+        "./views/triplex/Triplex_AorticValve_Regurgitation.ts",
+        "./views/triplex/Triplex_AorticValve_VelocityRatio_Vmax.ts",
+        "./views/triplex/Triplex_AorticValve_VelocityRatio_VTI.ts",
+        "./views/triplex/Triplex_Continuity_Equation.ts",
+        "./views/triplex/Triplex_LeftAtrium_Volume_Index.ts",
+        "./views/triplex/Triplex_LeftAtrium_Volume.ts",
+        "./views/triplex/Triplex_Modified_Bernoulli_Equation.ts",
+        "./views/triplex/Triplex_Stroke_Volume_Index.ts",
+        "./views/triplex/Triplex_Stroke_Volume.ts",
+        "./services.ts",
+        "./controllers.ts",
+        "./filters.ts",
+        "./directives.ts",
+        "./app.ts"
+    ],
+    "atom": {
+        "rewriteTsconfig": true
+    }
 }
