--- a/medCalc/bower.json
+++ b/medCalc/bower.json
@@ -4,7 +4,6 @@
     "angular": "^1.4.8",
     "angular-i18n": "^1.4.8",
     "angular-animate": "^1.4.8",
-    "angular-sanitize": "^1.4.8",
     "json3": "^3.3.2",
     "moment": "^2.10.6",
     "firebase": "^2.3.2",
@@ -15,9 +14,10 @@
     "underscore": "^1.8.3",
     "angular-material": "^1.0.0",
     "material-design-icons": "~2.1.1",
-    "angular-scroll": "~1.0.0"
+    "angular-scroll": "~1.0.0",
+    "angular-messages": "1.4.6"
   },
   "resolutions": {
-    "angular": "^1.2.16"
+    "angular": "1.4.8"
   }
 }
