--- a/medCalc/scripts/tsconfig.json
+++ b/medCalc/scripts/tsconfig.json
@@ -1,26 +1,53 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "declaration": false,
-    "noImplicitAny": false,
-    "removeComments": true,
-    "noLib": false,
-    "outDir": "../temp/tscscripts/",
-    "inlineSourceMap": true
-  },
+    "compilerOptions": {
+      "target": "es5",
+      "module": "system",
+        "declaration": false,
+        "noImplicitAny": false,
+        "removeComments": true,
+        "noLib": false,
+        "outDir": "../temp/tscscripts/",
+        "inlineSourceMap": true
+    },
     "filesGlob": [
         "./**/*.ts",
         "../typings/**/*.ts",
         "!../../node_modules/**/*.ts"
     ],
     "files": [
+        "./app.ts",
+        "./controllers.ts",
+        "./directives.ts",
+        "./filters.ts",
+        "./services.ts",
+        "./typings/angular-material/angular-material.d.ts",
+        "./typings/angular-scroll/angular-scroll.d.ts",
         "./typings/angularjs/angular-animate.d.ts",
         "./typings/angularjs/angular-sanitize.d.ts",
         "./typings/angularjs/angular.d.ts",
+        "./typings/cordova/cordova.d.ts",
+        "./typings/cordova/plugins/BatteryStatus.d.ts",
+        "./typings/cordova/plugins/Camera.d.ts",
+        "./typings/cordova/plugins/Contacts.d.ts",
+        "./typings/cordova/plugins/Device.d.ts",
+        "./typings/cordova/plugins/DeviceMotion.d.ts",
+        "./typings/cordova/plugins/DeviceOrientation.d.ts",
+        "./typings/cordova/plugins/Dialogs.d.ts",
+        "./typings/cordova/plugins/FileSystem.d.ts",
+        "./typings/cordova/plugins/FileTransfer.d.ts",
+        "./typings/cordova/plugins/Globalization.d.ts",
+        "./typings/cordova/plugins/InAppBrowser.d.ts",
+        "./typings/cordova/plugins/Media.d.ts",
+        "./typings/cordova/plugins/MediaCapture.d.ts",
+        "./typings/cordova/plugins/NetworkInformation.d.ts",
+        "./typings/cordova/plugins/Push.d.ts",
+        "./typings/cordova/plugins/Splashscreen.d.ts",
+        "./typings/cordova/plugins/StatusBar.d.ts",
+        "./typings/cordova/plugins/Vibration.d.ts",
+        "./typings/cordova/plugins/WebSQL.d.ts",
         "./typings/jquery/jquery.d.ts",
         "./typings/mathjs/mathjs.d.ts",
         "./typings/underscore/underscore.d.ts",
-        "./views/views.ts",
         "./views/cardiology/CHADScore.ts",
         "./views/cardiology/CRUSADEScore.ts",
         "./views/cardiology/ESCSCORE.ts",
@@ -57,11 +84,7 @@
         "./views/triplex/Triplex_Modified_Bernoulli_Equation.ts",
         "./views/triplex/Triplex_Stroke_Volume_Index.ts",
         "./views/triplex/Triplex_Stroke_Volume.ts",
-        "./services.ts",
-        "./controllers.ts",
-        "./filters.ts",
-        "./directives.ts",
-        "./app.ts"
+        "./views/views.ts"
     ],
     "atom": {
         "rewriteTsconfig": true
