--- a/medCalc/bower.json
+++ b/medCalc/bower.json
@@ -1,23 +1,14 @@
 {
   "name": "medCalc",
   "dependencies": {
-    "angular": "^1.4.8",
-    "angular-i18n": "^1.4.8",
-    "angular-animate": "^1.4.8",
-    "json3": "^3.3.2",
+    "angular": "^1.4.6",
+    "angular-i18n": "^1.4.6",
+    "angular-animate": "^1.4.6",
     "moment": "^2.10.6",
-    "firebase": "^2.3.2",
-    "angularfire": "^1.1.3",
-    "jquery": "^2.1.4",
     "mathjs": "^2.5.0",
-    "ngStorage": "^0.3.2",
     "underscore": "^1.8.3",
     "angular-material": "^1.0.0",
-    "material-design-icons": "~2.1.1",
-    "angular-scroll": "~1.0.0",
-    "angular-messages": "1.4.6"
-  },
-  "resolutions": {
-    "angular": "1.4.8"
+    "angular-scroll": "^1.0.0",
+    "angular-katex": "^0.9.0"
   }
 }
