--- a/medCalc/bower.json
+++ b/medCalc/bower.json
@@ -1,14 +1,16 @@
 {
   "name": "medCalc",
   "dependencies": {
-    "angular": "^1.4.6",
-    "angular-i18n": "^1.4.6",
-    "angular-animate": "^1.4.6",
+    "angular": "^1.4.8",
+    "angular-i18n": "^1.4.8",
+    "angular-animate": "^1.4.8",
     "moment": "^2.10.6",
     "mathjs": "^2.5.0",
     "underscore": "^1.8.3",
     "angular-material": "^1.0.0",
-    "angular-scroll": "^1.0.0",
     "angular-katex": "^0.9.0"
+  },
+  "resolutions": {
+    "angular": "1.x.x"
   }
 }
