--- a/medCalc/bower.json
+++ b/medCalc/bower.json
@@ -9,7 +9,9 @@
     "underscore": "^1.8.3",
     "angular-material": "^1.0.0",
     "angular-katex": "^0.9.0",
-    "angular-scroll": "^1.0.0"
+    "angular-scroll": "^1.0.0",
+    "angular-translate": "^2.8.1"
+
   },
   "resolutions": {
     "angular": "1.x.x"
