--- a/medCalc/bower.json
+++ b/medCalc/bower.json
@@ -10,8 +10,8 @@
     "angular-material": "^1.0.0",
     "angular-katex": "^0.9.0",
     "angular-scroll": "^1.0.0",
-    "angular-translate": "^2.8.1"
-
+    "angular-translate": "^2.8.1",
+    "v-accordion": "^1.4.1"
   },
   "resolutions": {
     "angular": "1.x.x"
