--- a/medCalc/scripts/tsconfig.json
+++ b/medCalc/scripts/tsconfig.json
@@ -56,33 +56,73 @@
         "./views/cardiology/HEARTScore.ts",
         "./views/cardiology/KillipClassEval.ts",
         "./views/cardiology/NYHAClassEval.ts",
+        "./views/drugs/Aminoglycosides/Amicacin.ts",
+        "./views/drugs/Aminoglycosides/Gentamycin.ts",
+        "./views/drugs/Aminoglycosides/Netilimicin.ts",
+        "./views/drugs/Antifungal/AmphotericinB.ts",
+        "./views/drugs/Antifungal/Fluconazole.ts",
+        "./views/drugs/Antiviral/Acyclovir.ts",
+        "./views/drugs/Carbapenems/Imipenem.ts",
+        "./views/drugs/Carbapenems/Meropenem.ts",
+        "./views/drugs/Cephalosporins/Cefepime.ts",
+        "./views/drugs/Cephalosporins/Cefoxitin.ts",
+        "./views/drugs/Cephalosporins/Ceftriaxone.ts",
+        "./views/drugs/Cephalosporins/Cefuroxim.ts",
+        "./views/drugs/Chinolons/Ciprofloxacin.ts",
+        "./views/drugs/Chinolons/Levofloxacin.ts",
+        "./views/drugs/Chinolons/Moxifloxacin.ts",
+        "./views/drugs/Chinolons/Norfloxacin.ts",
+        "./views/drugs/Clindamycin.ts",
+        "./views/drugs/Colistin.ts",
+        "./views/drugs/Glycopeptids/Teicoplanin.ts",
+        "./views/drugs/Glycopeptids/Vancomycin.ts",
+        "./views/drugs/Macrolides/Azithromycin.ts",
+        "./views/drugs/Macrolides/Klarithromycin.ts",
+        "./views/drugs/Metronidazole.ts",
+        "./views/drugs/Oxazolidinones/Linezolid.ts",
+        "./views/drugs/Penicillins/AmbicillinSulbactam.ts",
+        "./views/drugs/Penicillins/Amoxicillin.ts",
+        "./views/drugs/Penicillins/AmoxicillinClavulanic.ts",
+        "./views/drugs/Penicillins/Aztreonam.ts",
+        "./views/drugs/Penicillins/Cloxacillin.ts",
+        "./views/drugs/Penicillins/Dicloxacillin.ts",
+        "./views/drugs/Penicillins/Penicillin.ts",
+        "./views/drugs/Penicillins/Piperacillin.ts",
+        "./views/drugs/Penicillins/PiperacillinTazobactam.ts",
+        "./views/drugs/Penicillins/TicarcillinClavulanic.ts",
+        "./views/drugs/Rifampicin.ts",
         "./views/ecg/ECG_Duke_Treadmill_Score.ts",
         "./views/ecg/ECG_Heart_Rate.ts",
         "./views/ecg/ECG_QT.ts",
         "./views/ecg/ECG_QTc.ts",
         "./views/ecg/ECG_Sokolow.ts",
+        "./views/general/Calc.ts",
         "./views/internalMedicine/BMI.ts",
         "./views/internalMedicine/BSA.ts",
-        "./views/internalMedicine/Calc.ts",
         "./views/internalMedicine/GFR.ts",
         "./views/internalMedicine/GlasgowComaScale.ts",
+        "./views/MinMaxToValue.ts",
         "./views/pulmonology/ArterialBloodGasses.ts",
         "./views/pulmonology/GenevaScore.ts",
         "./views/pulmonology/PESI.ts",
         "./views/pulmonology/WellsScore.ts",
-        "./views/triplex/Triplex_AorticValve_Area_VTI.ts",
         "./views/triplex/Triplex_AorticValve_Area_Vmax.ts",
+        "./views/triplex/Triplex_AorticValve_Area_VTI.ts",
         "./views/triplex/Triplex_AorticValve_Impedance.ts",
-        "./views/triplex/Triplex_AorticValve_Regurgitation.ts",
-        "./views/triplex/Triplex_AorticValve_VelocityRatio_VTI.ts",
+        "./views/triplex/Triplex_AorticValve_Regurgitation_PHT.ts",
+        "./views/triplex/Triplex_AorticValve_Regurgitation_VC.ts",
         "./views/triplex/Triplex_AorticValve_VelocityRatio_Vmax.ts",
+        "./views/triplex/Triplex_AorticValve_VelocityRatio_VTI.ts",
         "./views/triplex/Triplex_Continuity_Equation.ts",
-        "./views/triplex/Triplex_LeftAtrium_Volume.ts",
         "./views/triplex/Triplex_LeftAtrium_Volume_Index.ts",
+        "./views/triplex/Triplex_LeftAtrium_Volume.ts",
+        "./views/triplex/Triplex_LeftVentricle_Volume.ts",
+        "./views/triplex/Triplex_MitralValve_dPdT.ts",
         "./views/triplex/Triplex_Modified_Bernoulli_Equation.ts",
-        "./views/triplex/Triplex_Stroke_Volume.ts",
         "./views/triplex/Triplex_Stroke_Volume_Index.ts",
-        "./views/views.ts"
+        "./views/triplex/Triplex_Stroke_Volume.ts",
+        "./views/views.ts",
+        "./views/viewsCollections.ts"
     ],
     "atom": {
         "rewriteTsconfig": true
