--- a/medCalc/package.json
+++ b/medCalc/package.json
@@ -1,19 +1,20 @@
 {
   "name": "medCalc",
   "version": "1.0.0",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "cordova": "^5.4.1",
     "browser-sync": "^2.10.0",
+    "cordova": "^5.4.1",
     "del": "^2.2.0",
     "es6-promise": "^3.0.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-bower": "^0.0.11",
     "gulp-concat": "^2.6.0",
+    "gulp-ftp": "^1.1.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.4.0",
+    "gulp-manifest": "^0.1.1",
     "gulp-minify-css": "^1.2.2",
     "gulp-minify-html": "^1.0.4",
     "gulp-notify": "^2.2.0",
@@ -21,7 +22,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
-    "gulp-watch": "^4.3.5",
-    "gulp-manifest": "^0.1.1"
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.5"
   }
 }
