--- a/medCalc/bower.json
+++ b/medCalc/bower.json
@@ -2,6 +2,7 @@
   "name": "medCalc",
   "dependencies": {
     "angular": "^1.4.8",
+    "angular-route": "^1.4.8",
     "angular-i18n": "^1.4.8",
     "angular-animate": "^1.4.8",
     "moment": "^2.10.6",
@@ -12,8 +13,5 @@
     "angular-scroll": "^1.0.0",
     "angular-translate": "^2.8.1",
     "v-accordion": "^1.4.1"
-  },
-  "resolutions": {
-    "angular": "1.x.x"
   }
 }
